@@ -1,8 +1,9 @@
 Change log next version
 -----------------------
-* Fixed a trivial error in the error message that is displayed when no parser is found for a certain content type (issue 103).
+* Fixed a trivial bug in the error message that is displayed when no parser is found for a certain content type (issue 103).
 * Fixed a bug that caused the response body to be parsed as JSON if Content-Type of the response was JSON even though no body matchers were specified (issue 102).
 * Improved List parsing with XmlPath. E.g. from(XML).getList("shopping.category.item.price") will now automatically convert the output from NodeChildren to a List. Also from(XML).getList("shopping.category.item.price", Float.class) will automatically convert all list members to floats.
+* When result from XmlPath expression is a single entity it's treated as a list if explicitly defined: E.g. from(XML).getList("shopping.category.item.price[0]") and from(XML).get("shopping.category.item.price.list()") will return a list (issue 59).
 
 Change log 1.3 (2011-09-05)
 ---------------------------
